adding exception handlers