@@ -4,6 +4,7 @@ import com.azhar.taskmanagement.dao.Task;
 import com.azhar.taskmanagement.dao.User;
 import com.azhar.taskmanagement.dao.dto.TaskDTO;
 import com.azhar.taskmanagement.dao.enums.TaskStatus;
+import com.azhar.taskmanagement.exception.EntityNotFoundException;
 import com.azhar.taskmanagement.service.BaseService;
 import com.azhar.taskmanagement.service.TaskService;
 import lombok.extern.slf4j.Slf4j;
@@ -11,7 +12,6 @@ import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @Slf4j
@@ -19,25 +19,25 @@ public class TaskServiceImpl extends BaseService implements TaskService {
     @Override
     public TaskDTO saveTask(TaskDTO taskDTO) {
         Task task = modelMapper.map(taskDTO, Task.class);
-        task.setProject(projectRepository.findById(taskDTO.getProjectId()).orElseThrow());
-        task.setAssignee(userRepository.findById(taskDTO.getAssigneeId()).orElseThrow());
+        task.setProject(projectRepository.findById(taskDTO.getProjectId()).orElseThrow(() -> new EntityNotFoundException("Project: ", taskDTO.getProjectId())));
+        task.setAssignee(userRepository.findById(taskDTO.getAssigneeId()).orElseThrow(() -> new EntityNotFoundException("User: ",taskDTO.getAssigneeId())));
         Task savedTask = taskRepository.save(task);
         return modelMapper.map(savedTask, TaskDTO.class);
     }
 
     @Override
     public List<TaskDTO> getAllUsers() {
-        return taskRepository.findAll().stream().map(task -> modelMapper.map(task, TaskDTO.class)).collect(Collectors.toList());
+        return taskRepository.findAll().stream().map(task -> modelMapper.map(task, TaskDTO.class)).toList();
     }
 
     @Override
     public TaskDTO getUserById(Long id) {
-        return modelMapper.map(taskRepository.findById(id).orElseThrow(), TaskDTO.class);
+        return modelMapper.map(taskRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Task with Id: ",id)), TaskDTO.class);
     }
 
     @Override
     public TaskDTO updateUser(Long id, TaskDTO taskDTO) {
-        Task dbTask = taskRepository.findById(id).orElseThrow();
+        Task dbTask = taskRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Task with id: ",id));
         dbTask.setTitle(taskDTO.getTitle());
         dbTask.setDescription(taskDTO.getDescription());
         dbTask.setDueDate(taskDTO.getDueDate());
